kubernetes/staging/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $CI_ENVIRONMENT_SLUG
  annotations:
    ingress.kubernetes.io/proxy-buffer-size: "128k"
    ingress.kubernetes.io/proxy-buffers: "4 256k"
  namespace: $KUBE_NAMESPACE
  labels:
    app: $CI_ENVIRONMENT_SLUG
    pipeline_id: "$CI_PIPELINE_ID"
    build_id: "$CI_JOB_ID"
spec:
  tls:
  - hosts:
    - $CI_ENVIRONMENT_HOSTNAME
    - events-$CI_ENVIRONMENT_HOSTNAME
    - nodejs-$CI_ENVIRONMENT_HOSTNAME
    secretName: ssl
  rules:
  - host: $CI_ENVIRONMENT_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: $CI_ENVIRONMENT_SLUG
          servicePort: $PORT
  - host: events-$CI_ENVIRONMENT_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: $CI_ENVIRONMENT_SLUG
          servicePort: $PORT
  - host: nodejs-$CI_ENVIRONMENT_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: $CI_ENVIRONMENT_SLUG
          servicePort: $PORT
